@startuml

skinparam classAttributeIconSize 0


Inscripcion --> "*" Materia
Inscripcion --> Alumno

Alumno --> "*" Materia

Materia --> "*" Materia


class Alumno {
	- materiasAprobadas : Set<Materia>

	+ puedeCursarla(Materia) : boolean
	+ puedeCursarTodas(Set<Materia>) : boolean
}

class Materia {
    - materiasCorrelativas : Set<Materia>
}

class Inscripcion {
    - materias : Set<Materia>
    - alumnoAInscribirse : Alumno

    + aprobada() : boolean
}

@enduml